Bug 286212 - Digikam's shortcut for Delete permanently does not work (shift + del).
Summary: Digikam's shortcut for Delete permanently does not work (shift + del).
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Keyboard (other bugs)
Version First Reported In: 2.3.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-09 19:57 UTC by Thomas Damgaard
Modified: 2017-08-02 17:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.0
Sentry Crash Report:


Attachments
SHIFT+DEL conflict (641.38 KB, image/png)
2011-11-13 10:18 UTC, caulier.gilles
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Damgaard 2011-11-09 19:57:03 UTC
Version:           2.3.0 (using KDE 4.7.2) 
OS:                Linux

In 11.10, Digikam's shortcut for Delete permanently does not work (shift + del).
This error is given when selecting an image and pressing shift+del:
http://i.imgur.com/CeBN5.png

When going to Configure Shortcuts and sorting by "shortcut" column, it appears that there is only one action defined with this combo: delete permanently.
In other words: it is NOT ambiguous. 

Configure shortcuts is shown here:
http://i.imgur.com/XWrzv.png


Reproducible: Always

Steps to Reproduce:
Select an image.
Press shift+del.


Actual Results:  
You get an error.


Expected Results:  
File deletion dialog should be shown.
Comment 1 caulier.gilles 2011-11-12 13:57:36 UTC
Look indeep in shortcuts config dialog, you will see that KDE define Edit/Cut alternate shortcut as SHIFT+DEL...

Edit action are defined by KDE libs. It's factorized for all applications.

Proposal : use CTRL+DEL instead...

Gilles Caulier
Comment 2 caulier.gilles 2011-11-12 14:07:31 UTC
Following this page :
http://en.wikipedia.org/wiki/Table_of_keyboard_shortcuts

...CTRL+DEL is already used. 

ALT+DEL sound like the solution

Gilles Caulier
Comment 3 Ananta Palani 2011-11-12 16:29:03 UTC
On Windows, when working with files SHIFT+DEL is permanently delete a file. Isn't there a way to tell KDE that permanently delete is the definite action desired and override the ambiguity?
Comment 4 Marcel Wiesweg 2011-11-12 16:52:21 UTC
Shift+Del is working in Dolphin, and I know it's used in Windows Explorer. It's definitely the right shortcut for "Delete permanently".
Comment 5 Marcel Wiesweg 2011-11-12 16:52:51 UTC
See this code from dolphin:

    // need to remove shift+del from cut action, else the shortcut for deletejob
    // doesn't work
    KAction* cut = KStandardAction::cut(this, SLOT(cut()), actionCollection());
    KShortcut cutShortcut = cut->shortcut();
    cutShortcut.remove(Qt::SHIFT | Qt::Key_Delete, KShortcut::KeepEmpty);
    cut->setShortcut(cutShortcut);
Comment 6 caulier.gilles 2011-11-13 10:18:47 UTC
Created attachment 65584 [details]
SHIFT+DEL conflict

Marcel, Ananta,

You cannot see the same conflict on your computer with config dialog ?

Gilles Caulier
Comment 7 Thomas Damgaard 2011-11-13 15:51:11 UTC
Marcel, I agree. Shift+Del works in Dolphin. And it is also used in Windows Explorer. It is rather confusing that it does not work in digikam.

Another thing: it is really not great that the user receives and error only telling her that the shortcut is ambiguous. It should provide more information, such as: 
1) *why* is it ambiguous -- i.e. which actions are defined to have this shortcut combo.
2) *how* does the user solve the problem?
3) preferably the user should be given the option to choose which one of the conflicting actions she wants to be working -- either in this particular application or globally across all KDE applications.
Comment 8 Marcel Wiesweg 2011-11-13 16:28:31 UTC
Git commit bdf416be9a5dcc3aedc58e64718b222890c49600 by Marcel Wiesweg.
Committed on 13/11/2011 at 17:27.
Pushed by mwiesweg into branch 'master'.

Remove secondary shortcut Shift+Del from Cut action, so that Delete permanently can work

BUG: 286212

M  +2    -1    NEWS
M  +5    -0    digikam/main/digikamapp.cpp

http://commits.kde.org/digikam/bdf416be9a5dcc3aedc58e64718b222890c49600
Comment 9 Thomas Damgaard 2011-11-13 18:45:56 UTC
Thanks. Looking forward to try it.
Comment 10 Marcel Wiesweg 2011-11-14 18:40:00 UTC
> 1) *why* is it ambiguous -- i.e. which actions are defined to have this
> shortcut combo.
> 2) *how* does the user solve the problem?
> 3) preferably the user should be given the option to choose which one of the
> conflicting actions she wants to be working -- either in this particular
> application or globally across all KDE applications.

I agree that the message box is not really helpful, but, it comes from kdelibs, no code in digikam about this.
Comment 11 Thomas Damgaard 2011-11-14 19:47:57 UTC
Marcel, ok. Maybe this should be reported to kdelibs then. I am not familiar with kdelibs. Are you? If so, will you report the bug there?