Remove secondary shortcut Shift+Del from Cut action, so that Delete permanently can work

BUG: 286212